--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -52,7 +52,7 @@
 }
 
 @InProceedings{Davidson2017,
-  author    = {Thomas Davidson, Dana Warmsley, Michael Macy, Ingmar Weber},
+  author    = {Davidson, Dana Warmsley, Michael Macy and Ingmar Weber},
   title     = {Automated Hate Speech Detection and the Problem of Offensive Language},
   booktitle = {ICWSM 2017},
   year      = {2017},
@@ -85,7 +85,7 @@
 }
 
 @InProceedings{Anzovino2018,
-  author    = {Maria Anzovino, Elisabetta Fersini, and Paolo Rosso},
+  author    = {Anzovino, Elisabetta Fersini and Paolo Rosso},
   title     = {Automatic Identification and Classification of Misogynistic Language on Twitter},
   booktitle = {Springer International Publishing AG, part of Springer Nature 2018},
   year      = {2018},
@@ -113,7 +113,7 @@
 }
 
 @Misc{AMI2018,
-  author = {https://amiibereval2018.wordpress.com/},
+  author = {IberEval},
   title  = {Automatic Misogyny Identification, IBEREVAL 2018},
   year   = {2018},
   url    = {https://amiibereval2018.wordpress.com},
@@ -176,7 +176,7 @@
 }
 
 @InProceedings{AMIOverview2018,
-  author    = {E. Fersini, P. Rosso, and M. Anzovino},
+  author    = {Fersini, P. Rosso, and M. Anzovino},
   title     = {Overview of the Task on Automatic Misogyny Identification at IberEval 2018},
   booktitle = {IberEval 2018},
   year      = {2018},
@@ -262,7 +262,7 @@
 }
 
 @InProceedings{Helena2016,
-  author    = {Helena Gómez-Adorno, Ilia Markov, Grigori Sidorov},
+  author    = {Gómez-Adorno, Ilia Markov and Grigori Sidorov},
   title     = {Compilación de un lexicón de redes sociales para la identificación de perfiles de autor},
   booktitle = {Centro de Investigación en Computación, México},
   year      = {2016},
