--- a/Plantilla TFM.tex
+++ b/Plantilla TFM.tex
@@ -213,7 +213,7 @@ Siempre suelo dejar lo mejor para el final. A Jhoni, mi hermano, me es imposible
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter*{Resumen}
 \label{sec:Resumen}
-\noindent En el presente trabajo se propone una arquitectura para la detección del machismo en la red de microblogging Twitter. El objetivo es comprender los mecanismos y señales textuales que conlleven actitudes o lenguaje machista en castellano. Para ello, se compone un corpus que contiene texto con contenido y expresiones machistas utilizando como fuente de datos la red social Twitter. Para la creación del corpus, se desarrollará una herramienta que recopilará los mensajes creados en Twitter que contengan distintos términos que pueden conllevar comportamientos machistas. Las expresiones o términos que se buscan son aquellas que, de un modo u otro, minusvaloran el papel de las mujeres en nuestra sociedad, incentiven el abuso o acoso hacia las mujeres, o no les permita expresarse libremente. Existen gran cantidad de expresiones y términos que se utilizan a diario de modo consciente o no que minimizan el papel de la mujer en la sociedad. Expresiones como ``feminazi'', ``niñata'' o ``a fregar'' han sido utilizadas para recopilar los tweets. Asimismo, utilizando el corpus generado, se desarrolla un sistema de clasificación que permite detectar lenguaje machista de un modo automatizado. Se emplean distintos algoritmo de clasificación y se establecen dos líneas base que sirven como punto de partida para la evaluación del sistema.
+\noindent En el presente trabajo se propone una arquitectura para la detección del machismo en la red de microblogging Twitter. El objetivo es comprender los mecanismos y señales textuales que conllevan actitudes o lenguaje machista en castellano. Para ello, se ha desarrollado un corpus que contiene texto con contenido y expresiones machistas utilizando como fuente de datos la red social Twitter. Para la creación del corpus, se desarrollará una herramienta que recopilará los mensajes creados en Twitter que contengan distintos términos que pueden conllevar comportamientos machistas. Las expresiones o términos que se buscan son aquellas que, de un modo u otro, minusvaloran el papel de las mujeres en nuestra sociedad, incentivan el abuso o acoso hacia las mujeres, o no les permite expresarse libremente. Existen gran cantidad de expresiones y términos que se utilizan a diario de modo, consciente o no, que minimizan el papel de la mujer en la sociedad. Expresiones como ``feminazi'', ``niñata'' o ``a fregar'' han sido utilizadas para recopilar los tweets. Asimismo, utilizando el corpus generado, se desarrolla un sistema de clasificación que permite detectar lenguaje machista de un modo automatizado. Se emplean distintos algoritmos de clasificación y se establecen dos líneas base que sirven como punto de partida para la evaluación del sistema.
 
 Finalmente, se ha realizado una evaluación exhaustiva del sistema de clasificación sobre el corpus creado para determinar su rendimiento. Los resultados obtenidos muestran que el procedimiento empleado es capaz de detectar el machismo en el corpus utilizado con un buen acierto. Sin embargo, se han detectado distintas limitaciones y problemas debido a la aproximación empleada.
 
@@ -224,7 +224,7 @@ Finalmente, se ha realizado una evaluación exhaustiva del sistema de clasificaci
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter*{Abstract}
 \label{sec:Abstract}
-\noindent The present work defines a new architecture to detect sexism at Twitter. The main goal is to understand the mechanism and textual signals which imply sexist attitudes or language of this kind in spanish. We create a new corpus which contains text with sexist expressions using the social network Twitter as main datasource. A specific tool is developed to collect all the messages created at Twitter containing certain terms. We search for expressions which underestimate the role of women in our society, encourage the harassment towards them or limit their freedom of speech. There are many expressions used in a daily basis that underestimate the role of women in society. Terms such as ``feminazi'', ``niñata'' or ``a fregar'' have been used to collect tweets in our corpus. We also develop a classification system which allows us to identify sexist language in an automatic way. The system employs several machine learning algorithms and establish two baselines used as reference points for the system's evaluation.
+\noindent The present work defines a new architecture to detect sexism at Twitter. The main goal is to understand the mechanism and textual signals which imply sexist attitudes or language of this kind in Spanish. We create a new corpus which contains text with sexist expressions using the social network Twitter as main datasource. A specific tool is developed to collect all the messages created at Twitter containing certain terms. We search for expressions which underestimate the role of women in our society, encourage the harassment towards them or limit their freedom of speech. There are many expressions used in a daily basis that underestimate the role of women in society. Terms such as ``feminazi'', ``niñata'' or ``a fregar'' have been used to collect tweets in our corpus. We also develop a classification system which allows us to identify sexist language in an automatic way. The system employs several machine learning algorithms and establishes two baselines used as reference for the system's evaluation.
 
 Finally, an extensive evaluation is performed on the corpus to determine the performance of our approach in the classification task. The results obtained show that this procedure is able to identify sexism properly in the corpus used. However, some drawbacks and problems have been detected due to the approach used.
 
